--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "strict": true,
     "skipLibCheck": true,
     "baseUrl": ".",
-    "paths": {} // Alias for imports
+    "paths": {}
   },
   "include": [
     "src/**/*"
