--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "no-useless-constructor": "off",
         "no-empty-function": "off",
         "import/no-unresolved": "off",
+        "no-undef": "off",
         "semi": [
             "error",
             "never"
