--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "project": "./tsconfig.json"
     },
     "plugins": [
         "@typescript-eslint"
@@ -42,6 +43,8 @@
         "linebreak-style": [
             "error",
             "windows"
-        ]
+        ],
+        "@typescript-eslint/no-floating-promises": ["error"],
+        "@typescript-eslint/no-misused-promises": ["error"]
     }
 }
