--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,9 @@
     "paths": {
       "@functional/*": ["./src/shared/functional/*"],
       "@shared/*": ["./src/shared/*"],
-      "@entities/*": ["./src/domain/entities/*"]
+      "@entities/*": ["./src/domain/entities/*"],
+      "@repositories/*": ["./src/application/repositories/*"],
+      "@tests/*": ["./src/tests/*"]
     }
   },
   "include": [
